# meeting-room-app-backend

./: .flake8  .gitignore  README.md  app.py  compose.yaml  index.py  pyproject.toml  secrets.toml  setting.py
.github/workflows/: test.yml
.streamlit/: secrets.toml
sql_app/: crud.py  database.py  main.py  models.py  schemas.py  setting.py
test/: sample.py  test_sample.py
utils/: http_client.py
web/: index.py
